# teachreg

./: CMakeLists.txt  README.md  adddatedialog.cpp  adddatedialog.h  adddatedlg.ui  createdbdialog.cpp  createdbdialog.h  createdbdlg.ui  databasemanager.cpp  databasemanager.h  main.cpp  main_window.ui  optionsdialog.cpp  optionsdialog.h  optionsdlg.ui  studentlistdialog.cpp  studentlistdialog.h  studentlistdlg.ui  subgroupsdialog.cpp  subgroupsdialog.h  subgroupsdlg.ui  teachmodel.cpp  teachmodel.h  teachreg.cpp  teachreg.desctop  teachreg.h  teachreg.kdev4  teachreg.qrc  teachregconfigure.h.in  teachregmanager.cpp  teachregmanager.h
dbase/: databaseteachreg.cpp  databaseteachreg.h  group.cpp  group.h  htmlgenerator.cpp  htmlgenerator.h  student.cpp  student.h
doc/: license.html
